--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,22 +26,30 @@ jobs:
           paths:
               - .sfdx/*
               - project/*
-              - /usr/local/lib/node_modules
+
+      - persist_to_workspace:
+          root: /usr/local/lib/
+          paths:
+              - node_modules
 
   create_scratch_org:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/
+      - attach_workspace:
+          at: /usr/local/lib/
       - run:
           name: Create scratch org
           command: . build/create_scratch_org.sh
-  
+      
   build_source:
     <<: *defaults 
     steps:
       - attach_workspace:
           at: ~/
+      - attach_workspace:
+          at: /usr/local/lib/
       - run:
           name: Push source and run all tests
           command: . build/test.sh
@@ -51,6 +59,8 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
+      - attach_workspace:
+          at: /usr/local/lib/
       - run:
           name: Create package
           command: . build/create_package.sh
