--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
+          name: Install SFDX CLI
+          command: . build/install.sh
+      - run:
           name: Create scratch org
           command: . build/create_scratch_org.sh
       
